SunSkycodepkg/objects/SunSky_Release__c.object
<CustomObject>
    <description>Release Mgmt tracks the applicable information for interim releases as well as specific build components to be pushed from one organization to another.</description>
    <fields>
        <fullName>Est_Hours_Explanation__c</fullName>
        <description>This field puts a comment on the Page Layout that explains a chart that is shown on the Page Layout.</description>
        <formula>IF( ISBLANK( Id ) , &quot;&quot;, &quot;Est. Hours shows the Hours associated with Build Components that are not Deployed. This is NOT Remaining Hours&quot;)</formula>
        <label>Est. Hours Explanation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Approver_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact managing the release status changes.</description>
        <label>Release Approver Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Release_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>The date the release is scheduled to deploy.</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Description__c</fullName>
        <description>A description of the release, a patch, phase, sprint, etc. and features included.</description>
        <label>Release Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Source_Environment__c</fullName>
        <description>The source environment where the components included in the release will be selected.</description>
        <label>Release Source Environment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <description>The status of the release.</description>
        <label>Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Release Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Target_Environment__c</fullName>
        <description>The target environment where the components included in the release will be deployed.</description>
        <label>Release Target Environment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to respond to technical questions related to the release.</description>
        <label>Release Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Release_Mgmt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Technical_Reference__c</fullName>
        <description>Additional technical details related to the release.</description>
        <label>Release Technical Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release_Toolset__c</fullName>
        <description>Tool used to deploy the release components.</description>
        <label>Release Toolset</label>
        <picklist>
            <picklistValues>
                <fullName>Change Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eclipse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmanaged Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tool Release Mgmt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release_Description__c</columns>
        <columns>Release_Source_Environment__c</columns>
        <columns>Release_Target_Environment__c</columns>
        <columns>Release_Technical_Reference__c</columns>
        <columns>Release_Date__c</columns>
        <columns>Release_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>SunSky Release Mgmt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Release Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>